# mercadopago-sdk-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml  shell.nix
src/: common_types.rs  errors.rs  helpers.rs  lib.rs  webhooks.rs
src/card_tokens/: mod.rs  requests.rs  responses.rs
src/payments/: mod.rs  requests.rs  responses.rs
src/preferences/: mod.rs  requests.rs  responses.rs
tests/: api.rs  common.rs
tests/assets/: card_tokens_create_request.json  card_tokens_create_response.json  checkout_preferences_request.json  checkout_preferences_response.json  create_payment_request.json  create_payment_response.json  payment_methods_response.json
