[package]
name = "mercadopago-sdk-rust"
version = "0.1.0"
authors = ["Martin Mariano <contato@martinmariano.com>"]
repository = "https://github.com/saskenuba/mercadopago-sdk-rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = "0.3"
oauth2 = { version = "4.2.0", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json"] }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
time = { version = "0.3.9", features = ["serde", "serde-well-known"] }

serde = { version = "1", features = ["derive"] }
serde-aux = "3"
serde_json = "1"
serde_path_to_error = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }